--- a/src/app/authentication/forgot-password.component.html
+++ b/src/app/authentication/forgot-password.component.html
@@ -7,13 +7,13 @@
     <div class="alert alert-success" *ngIf="successMessage">{{successMessage}}</div>
 
     <form [formGroup]="resetForm" (ngSubmit)="onSubmit(resetForm.value)">
-        <div class="form-group input-group" [ngClass]="{'has-error':!resetForm.controls['email'].valid && resetForm.controls['email'].dirty}">
+        <div class="form-group input-group" [ngClass]="{'has-error':!resetForm.controls['email'].valid && resetForm.controls['email'].touched}">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>              
             <input type="email" class="form-control" name="email" placeholder={{language?.placeHolders.email}} [formControl]="resetForm.controls['email']">
         </div>      
         <div class="form-control-feedback">
-            <p *ngIf="resetForm.controls['email'].hasError('required') && (resetForm.controls['email'].dirty)">{{authMessages?.errors.emailReq}}</p>
-            <p *ngIf="resetForm.controls['email'].hasError('pattern') && (resetForm.controls['email'].dirty)">{{authMessages?.errors.emailInvalid}}</p>
+            <p *ngIf="resetForm.controls['email'].hasError('required') && (resetForm.controls['email'].touched)">{{authMessages?.errors.emailReq}}</p>
+            <p *ngIf="resetForm.controls['email'].hasError('pattern') && (resetForm.controls['email'].touched)">{{authMessages?.errors.emailInvalid}}</p>
         </div>      
         <div class="form-group">
             <button type="submit" [disabled]="!resetForm.valid" class="btn btn-primary btn-lg">{{language?.messages.buttonMessage}}</button>
