--- a/src/app/authentication/reset-password.component.html
+++ b/src/app/authentication/reset-password.component.html
@@ -7,13 +7,13 @@
     <div class="alert alert-success" *ngIf="successMessage">{{successMessage}}</div>  
 
     <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit(resetPasswordForm.value)">
-        <div class="form-group input-group" [ngClass]="{'has-error':!resetPasswordForm.controls['password'].valid && resetPasswordForm.controls['password'].dirty}">
+        <div class="form-group input-group" [ngClass]="{'has-error':!resetPasswordForm.controls['password'].valid && resetPasswordForm.controls['password'].touched}">
             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>       
             <input type="password" class="form-control" name="password" placeholder={{language?.placeHolders.password}} [formControl]="resetPasswordForm.controls['password']">
         </div>
         <div class="form-control-feedback">
-            <p *ngIf="resetPasswordForm.controls['password'].hasError('required') && (resetPasswordForm.controls['password'].dirty)">{{authMessages?.errors.passwordReq}}</p>
-            <p *ngIf="resetPasswordForm.controls['password'].hasError('pattern') && (resetPasswordForm.controls['password'].dirty)">{{authMessages?.errors.passwordInvalid}}</p>        
+            <p *ngIf="resetPasswordForm.controls['password'].hasError('required') && (resetPasswordForm.controls['password'].touched)">{{authMessages?.errors.passwordReq}}</p>
+            <p *ngIf="resetPasswordForm.controls['password'].hasError('pattern') && (resetPasswordForm.controls['password'].touched)">{{authMessages?.errors.passwordInvalid}}</p>        
         </div>
         <div class="form-group input-group" [ngClass]="{'has-error':!resetPasswordForm.controls['confirmPassword'].valid && resetPasswordForm.controls['confirmPassword'].dirty}">
             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>       
