Made PR changes

--- a/src/app/unlocked-stage/unlocked-stage.component.html
+++ b/src/app/unlocked-stage/unlocked-stage.component.html
@@ -31,7 +31,7 @@
         <h2 class="swal2-title text-center">{{language?.alerts.loss.content}}</h2>
         <img id="trans-gif" src="../assets/img/unlocked-stage/mosquito-transmission.gif"/>
     </div>
-    <div class="swal2-title text-center" id="restart">
+    <div class="swal2-title text-center restart">
         <button class="btn btn-primary btn-lg" (click)="reload()">{{language?.messages.restartButton}}</button>
     </div>
 </div>
@@ -52,7 +52,7 @@
         <h2 class="swal2-title text-center">{{language?.alerts.win.content}}</h2>
         <img id="prevention" src="../assets/img/unlocked-stage/malaria-prevention.png"/>
     </div>
-    <div class="swal2-title text-center" id="restart">
+    <div class="swal2-title text-center restart">
         <button class="btn btn-primary btn-lg" (click)="reload()">{{language?.messages.restartButton}}</button>
     </div>
 </div>
