Made PR changes

--- a/src/app/unlocked-stage/unlocked-stage.component.html
+++ b/src/app/unlocked-stage/unlocked-stage.component.html
@@ -17,7 +17,7 @@
         <img id="spray-item" src="../assets/img/unlocked-stage/spray-item.gif"/>
     </div>
 </div>
-<div class="row col-lg-6 col-lg-offset-3 text-center" id="game-end-status" [hidden]="!gameOver">
+<div class="row col-lg-6 col-lg-offset-3 text-center" id="game-loss-status" [hidden]="!gameOver">
     <div class="swal2-icon swal2-error swal2-animate-error-icon">
         <span class="swal2-x-mark swal2-animate-x-mark">
             <span class="swal2-x-mark-line-left"></span>
@@ -36,7 +36,7 @@
     </div>
 </div>
 
-<div class="row col-lg-6 col-lg-offset-3 text-center" id="game-end-status" [hidden]="!success">
+<div class="row col-lg-6 col-lg-offset-3 text-center" id="game-win-status" [hidden]="!success">
     <div class="swal2-icon swal2-success swal2-animate-success-icon">
         <div class="swal2-success-circular-line-left"></div>
         <span class="swal2-success-line-tip swal2-animate-success-line-tip"></span> 
