Doctor Chat Module

--- a/src/app/infokit/infokit.component.scss
+++ b/src/app/infokit/infokit.component.scss
@@ -44,5 +44,10 @@
 }
 
 .close-button {
-    margin-top: 20px;
+    margin-top: $margin-large;
+}
+
+.infokit-icons {
+    height: 90px;
+    width: 90px;
 }
