--- a/src/app/meds-n-labels/activity-1/matchmeds.component.scss
+++ b/src/app/meds-n-labels/activity-1/matchmeds.component.scss
@@ -1,4 +1,4 @@
-@import "../styles/main";
+@import "../../styles/main";
 
 .medicine-container {
     padding: $padding-med;
@@ -25,7 +25,7 @@
 }
 
 @media only screen and (min-width: $screen-med) {
-    @include match-elements(35%, 45%, 70%);
+    @include match-elements(25%, 35%, 60%);
     .meds-description{
         padding-right: 10%;
     }
