--- a/src/app/styles/modules/_colors.scss
+++ b/src/app/styles/modules/_colors.scss
@@ -1,11 +1,13 @@
 $black: #000000;
 $white: #FFFFFF;
 $blue: #466BC1;
+$light-blue: #3095B4;
 $hover-blue: #3859A5;
 $red: #ED4337;
-$grey: #4A4A49;
+$grey: #75787B;
 $yellow: #fff000;
-$green: #037d0d;
+$green: rgba(52, 178, 51, 0.4);
+$pale-green: #C7fCC9;
 $dull-grey: #9C9999;
 $light-red: #D9534F;
 $transparent: transparent;
