--- a/src/app/styles/partials/_base.scss
+++ b/src/app/styles/partials/_base.scss
@@ -1,6 +1,7 @@
 @import "../modules/all";
 
 // Font Weights
+$regular: 600;
 $bold: 900;
 
 //Spacing
@@ -37,3 +38,4 @@ $border-radius: 10px;
 
 //margin
 $margin-med: 10px;
+$margin-large: 20px;
