--- a/src/app/infokit/infokit.component.html
+++ b/src/app/infokit/infokit.component.html
@@ -11,10 +11,10 @@
     <div class="infokit-components row">
       <div class="infokit-selector row" [hidden]="showInfo">
         <div class="col-xs-12" [hidden]="infokitAvailable">
-          <P> No infokit available </p>
+          <p> No infokit available </p>
         </div>
         <div class="col-xs-4" *ngFor="let infoBool of infokitActive" [hidden]="!infoBool.value">
-          <button class="btn btn-default btn-group-justified info-button" (click)="info(infoBool.def)">{{infoBool.def}}</button>
+          <button class="btn btn-default btn-group-justified info-button" (click)="info(infoBool.def)"><img class="infokit-icons" [src]="'assets/img/infokit/' + infoBool.img"></button>
         </div>
       </div>
       <div class="infokit-content" [hidden]="!showInfo">
