--- a/src/app/infokit/infokit.component.scss
+++ b/src/app/infokit/infokit.component.scss
@@ -32,6 +32,11 @@
     max-width: 500px;
 }
 
+.infokit-content {
+    font-weight: $regular;
+    font-size: $font-size-small;
+}
+
 .infokit-footer {
     font-size: $font-size-med;
     background: $blue;
