Updated Drag Drop

--- a/src/app/malaria-101/activity-2/dragdrop.component.scss
+++ b/src/app/malaria-101/activity-2/dragdrop.component.scss
@@ -1,7 +1,23 @@
-.content{
-    padding-top: 50px;
-}
+@import "../styles/main";
 
 .available-item{
-    padding: 10px;
+    padding: $padding-med;
+}
+
+.panel-available {
+    @include panel-style($light-blue);
+}
+
+.panel-dont {
+    @include panel-style($red);
+}
+
+.panel-do {
+    @include panel-style($green);
+}
+
+.wrong-drop {
+    border-color: $red;
+    border-width: 2px;
+    border-style: dashed;
 }
