Made PR changes

--- a/src/app/button-nav/button-nav.component.html
+++ b/src/app/button-nav/button-nav.component.html
@@ -1,15 +1,15 @@
 <span [className]="position + ' nav-back'" *ngIf="prevurl">
-    <button md-fab class="prev" (click)="prev()">
+    <button md-fab class="button-branding-green" (click)="prev()">
         <i class="material-icons">arrow_back</i>
     </button>
 </span>    
 <span class="nav-forward" *ngIf="completed && nexturl">
-    <button md-fab class="next" (click)="next()">
+    <button md-fab class="button-branding-green" (click)="next()">
         <i class="material-icons">arrow_forward</i>
     </button>
 </span>
 <span class="nav-forward bounce" *ngIf="!completed && complete && nexturl">
-    <button md-fab class="next" (click)="next()">
+    <button md-fab class="button-branding-green" (click)="next()">
         <i class="material-icons">arrow_forward</i>
     </button>
 </span> 
