--- a/src/app/meds-n-labels/activity-1/matchmeds.component.scss
+++ b/src/app/meds-n-labels/activity-1/matchmeds.component.scss
@@ -14,6 +14,10 @@
     overflow: hidden;
 }
 
+.heading-info {
+    color: $orange;
+}
+
 @include match-elements(0, 30%, 60%);
 
 @media only screen and (min-width: $screen-xsmall) {
