--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,22 +1,11 @@
-$intro-color: #00F977;
-$malaria-color: #EB5A61;
-$med-color: #017E84;
-$pc-policy-color: #F2AE3E;
-$white-color: #FFFFFF;
-
-$activity-incomplete: #BEBEBE;
-
-$malaria-outer-circle-color: #E13946;
-$med-outer-circle-color: #07717E;
-$pc-outer-circle-policy-color: #F09938;
-
-$header-blue: #04529D;
+@import "../styles/main";
 
 @mixin rotation($angle) {
     -ms-transform: rotate($angle); /* IE 9 */
     -webkit-transform: rotate($angle); /* Chrome, Safari, Opera */
     transform: rotate($angle);
 }
+
 
 @mixin circle($diameter) {
     display: flex;
@@ -90,7 +79,7 @@ $header-blue: #04529D;
 }
 
 .intro-outer-circle {
-    background: $white-color;
+    background: $white;
 }
 
 .intro-inner-circle {
@@ -110,7 +99,7 @@ $header-blue: #04529D;
 }
 
 .unlocked-inner-circle {
-    background: $white-color;
+    background: $white;
 }
 
 .malaria-outer-circle {
@@ -126,13 +115,13 @@ $header-blue: #04529D;
 }
 
 .unlocked-outer-circle {
-    background: $white-color;
+    background: $white;
 }
 
 .activity {
     font-size: 20px;
     font-weight: 900;
-    color: $white-color;
+    color: $white;
 }
 
 .but {
@@ -142,7 +131,7 @@ $header-blue: #04529D;
     display: flex;
     justify-content: center;
     margin: 30px -30px;
-    color: $white-color;
+    color: $white;
     font-size: 1.5vw;
     font-weight: 900;
     margin-bottom: 50px;
@@ -165,15 +154,6 @@ $header-blue: #04529D;
 }
 
 .unlocked-btn {
-    background-color: $white-color;
+    background-color: $white;
     color: grey;
-}
-
-.title {
-    color: $header-blue;
-    text-align: center;
-    margin-left: 10%;
-    font-weight: 900;
-    font-size: 25px;
-    margin-top: 10px;
 }
