--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,11 @@
-<div class="container-fluid">
-  <div class="page-header header-bar row">
-    <div class="col-xs-2 col-sm-5">
-      <button type="button" class="btn btn-default btn-lg toggle-button" aria-label="Left Align" (click)="navbartoggle()">
-        <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-      </button>
+<md-toolbar color="primary">
+    <div class="col-xs-1">
+        <button type="button" class="btn btn-default btn-lg toggle-button" aria-label="Left Align" (click)="navbartoggle()">
+            <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+        </button>
     </div>
-    <div class="col-xs-6 col-sm-5"><span class="header-white-1 text-center">{{language?.headings.titleLeft}}</span><span class="header-2 text-center">{{language?.headings.titleRight}}</span></div>
-    <div class="col-xs-4 col-sm-2">
-      <button type="button" class="btn btn-default logout-button" aria-label="Left Align" (click)="logout()">{{language?.messages.logoutButton}}</button>
+    <div class="col-md-10 text-center">
+        <span class="header-white-1 text-center">{{language?.headings.titleLeft}}</span><span class="header-2 text-center">{{language?.headings.titleRight}}</span>
     </div>
-  </div>
-</div>
+    <button type="button" class="btn btn-default logout-button" aria-label="Left Align" (click)="logout()">{{language?.messages.logoutButton}}</button>      
+</md-toolbar>
