--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,19 +1,20 @@
 <div class="container-fluid">
   <div class="sidebar" [@toggleNav]="state">
-    <div class="sidebar-header">
+    <md-toolbar color="primary">
       <button type="button" class="btn btn-default btn-lg toggle-button" aria-label="Left Align" (click)="toggle()">
         <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
       </button>
-    </div>
+    </md-toolbar>    
+
     <ul class="nav text-center">
       <div class="profile">
-        <img  src="assets/img/profilepic.png" class="profile-pic img-circle">
+        <img  [src]="proPic" onError="this.src='assets/img/profilepic.png';" class="profile-pic img-circle">
         <p> {{username}} </p>
       </div>
-      <li><a routerLink="/intro">{{language?.links.introduction}}</a></li>
-      <li><a routerLink="/malaria101">{{language?.links.malaria101}}</a></li>
-      <li><a routerLink="/medicationlabels">{{language?.links.medsAndLabels}}</a></li>
-      <li><a routerLink="/pcpolicy">{{language?.links.pcpolicy}}</a></li>
+      <li><a routerLink="/introduction">{{language?.links.introduction}}</a></li>
+      <li><a routerLink="/malaria-101/activity-1-1">{{language?.links.malaria101}}</a></li>
+      <li><a routerLink="/meds-n-labels/activity-2">{{language?.links.medsAndLabels}}</a></li>
+      <li><a routerLink="/introduction/activity-2">{{language?.links.pcpolicy}}</a></li>
       <li><a (click)="toggleInfokit()">{{language?.links.infokit}}</a></li>
     </ul>
   </div>
