--- a/src/app/authentication/forgot-password.component.html
+++ b/src/app/authentication/forgot-password.component.html
@@ -8,15 +8,15 @@
 
     <form [formGroup]="resetForm" (ngSubmit)="onSubmit(resetForm.value)">
         <div class="form-group input-group" [ngClass]="{'has-error':!resetForm.controls['email'].valid && resetForm.controls['email'].touched}">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>              
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
             <input type="email" class="form-control" name="email" placeholder={{language?.placeHolders.email}} [formControl]="resetForm.controls['email']">
-        </div>      
+        </div>
         <div class="form-control-feedback">
             <p *ngIf="resetForm.controls['email'].hasError('required') && (resetForm.controls['email'].touched)">{{authMessages?.errors.emailReq}}</p>
             <p *ngIf="resetForm.controls['email'].hasError('pattern') && (resetForm.controls['email'].touched)">{{authMessages?.errors.emailInvalid}}</p>
-        </div>      
+        </div>
         <div class="form-group">
-            <button type="submit" [disabled]="!resetForm.valid" class="btn btn-primary btn-lg">{{language?.messages.buttonMessage}}</button>
-        </div>    
+            <button type="submit" [disabled]="!resetForm.valid" class="btn button-branding-blue btn-lg">{{language?.messages.buttonMessage}}</button>
+        </div>
     </form>
 </div>
