--- a/src/app/introduction/activity-2/activity-2.component.html
+++ b/src/app/introduction/activity-2/activity-2.component.html
@@ -5,7 +5,7 @@
       <p class="lead"> {{language?.descriptions.bodyContent1}} <Br> {{language?.descriptions.bodyContent2}}</p>
       <p class="lead text-primary"><strong> {{language?.descriptions.bodyContent3}} </strong></p>
       <img src="assets/img/mailpolicy.PNG" class="img-responsive center-block mail-policy-image">
-      <button type="button" class="btn btn-primary btn-lg" (click)="mail()"> {{language?.messages.mailButton}} </button>
+      <button type="button" class="btn btn-lg button-branding-blue" (click)="mail()"> {{language?.messages.mailButton}} </button>
       <p>{{language?.descriptions.bodyContent4 +' '+ email}}</p>
     </div>
   </div>
