--- a/src/app/malaria-101/activity-3/activity-3.component.html
+++ b/src/app/malaria-101/activity-3/activity-3.component.html
@@ -23,7 +23,7 @@
             <h2 class="swal2-title text-center" id="swal2-title">{{language?.descriptions.score}}<br>{{language?.descriptions.resultText1}} {{this.score}} {{language?.descriptions.resultText2}}</h2>
         </div>
         <div class="swal2-title text-center">
-            <button class="btn btn-primary btn-lg" (click)="reload()">{{language?.messages.resetButton}}</button>
+            <button class="btn button-branding-blue btn-lg" (click)="reload()">{{language?.messages.resetButton}}</button>
         </div>
     </div>
 </div>
