--- a/src/app/styles/modules/_colors.scss
+++ b/src/app/styles/modules/_colors.scss
@@ -3,11 +3,11 @@ $white: #FFFFFF;
 $blue: #466BC1;
 $light-blue: #3095B4;
 $hover-blue: #3859A5;
-$red: #ED4337;
+$red: #B71234;
 $grey: #75787B;
 $yellow: #fff000;
-$green: rgba(52, 178, 51, 0.4);
-$pale-green: #C7fCC9;
+$green: #34B233;
+$pale-green: rgba(52, 178, 51, 0.4);
 $dull-grey: #9C9999;
 $light-red: #D9534F;
 $transparent: transparent;
