--- a/src/app/introduction/activity-3/activity-3.component.html
+++ b/src/app/introduction/activity-3/activity-3.component.html
@@ -10,12 +10,11 @@
     </div>
     <div class="col-md-3 col-md-offset-3">
         <input type="file" name="file" id="file" class="hidden" accept="image/*" (change)="handleInputChange($event)">
-        <button class="btn btn-block btn-danger btn-lg" *ngIf='webcamState !== webcamStates.OPENED' (click)="openWebcam()">{{webcamButtonText}}</button>
-        <button class="btn btn-block btn-danger btn-lg" *ngIf='webcamState === webcamStates.OPENED' (click)="snapshot()">{{webcamButtonText}}</button>
-        <button class="btn btn-block btn-primary btn-lg" (click)="fireFileButtonClick()">{{language?.messages.browseButton}}</button>
-        <button class="btn btn-block btn-primary btn-lg" [disabled]='!imageLoaded' (click)="shufflePuzzle()">{{puzzleState}}</button>   
-        <button class="btn btn-block btn-success btn-lg" [disabled]='!(webcamState === webcamStates.CAPTURED || imageLoaded)' (click)="upload()">{{language?.messages.setProPicButton}}</button>
+        <button class="btn btn-block button-branding-red btn-lg" *ngIf='webcamState !== webcamStates.OPENED' (click)="openWebcam()">{{webcamButtonText}}</button>
+        <button class="btn btn-block button-branding-red btn-lg" *ngIf='webcamState === webcamStates.OPENED' (click)="snapshot()">{{webcamButtonText}}</button>
+        <button class="btn btn-block button-branding-blue btn-lg" (click)="fireFileButtonClick()">{{language?.messages.browseButton}}</button>
+        <button class="btn btn-block button-branding-blue btn-lg" [disabled]='!imageLoaded' (click)="shufflePuzzle()">{{puzzleState}}</button>
+        <button class="btn btn-block button-branding-green btn-lg" [disabled]='!(webcamState === webcamStates.CAPTURED || imageLoaded)' (click)="upload()">{{language?.messages.setProPicButton}}</button>
     </div>
 </div>
 <button-nav [complete]="activityComplete" [completed]="completed" nexturl="/malaria-101/activity-1-1" prevurl="/introduction/activity-2"></button-nav>
-
