--- a/src/app/introduction/activityintro/activityintro.component.html
+++ b/src/app/introduction/activityintro/activityintro.component.html
@@ -4,7 +4,7 @@
       <H1> {{language?.headings.introduction}} </H1>
       <H2> {{language?.headings.welcome}} </H2>
       <p class="lead"> {{language?.descriptions.bodyContent}} </p>
-      <a routerLink="/introduction/activity-1" class="btn btn-primary btn-lg">{{language?.messages.nextButton}}</a>
+      <a routerLink="/introduction/activity-1" class="btn btn-lg button-branding-blue">{{language?.messages.nextButton}}</a>
     </div>
   </div>
 </div>
